# deviceai

./: .gitignore  Makefile  README.md  settings.gradle.kts
.github/workflows/: ci.yml  publish.yml
cpp/: CMakeLists.txt
cpp/llm/: deviceai_llm_engine.cpp  deviceai_llm_engine.h
cpp/speech/: deviceai_speech_engine.cpp  deviceai_speech_engine.h
kotlin/core/: build.gradle.kts
kotlin/core/src/androidMain/kotlin/dev/deviceai/core/: DeviceCapabilities.android.kt  SessionId.android.kt
kotlin/core/src/androidMain/kotlin/dev/deviceai/core/jni/: JniBackendClient.kt
kotlin/core/src/androidMain/kotlin/dev/deviceai/models/: ModelStorage.android.kt
kotlin/core/src/commonMain/kotlin/dev/deviceai/core/: CloudConfig.kt  CoreSDKLogger.kt  DeviceAI.kt  DeviceAIRuntime.kt  DeviceCapabilities.kt
kotlin/core/src/commonMain/kotlin/dev/deviceai/core/backend/: BackendClient.kt  BackendClientImpl.kt  DeviceSession.kt  ManifestModels.kt
kotlin/core/src/commonMain/kotlin/dev/deviceai/core/telemetry/: TelemetryEngine.kt  TelemetryEvent.kt  TelemetryLevel.kt
kotlin/core/src/commonMain/kotlin/dev/deviceai/models/: PlatformStorage.kt
kotlin/core/src/iosMain/kotlin/dev/deviceai/core/: SessionId.ios.kt
kotlin/core/src/iosMain/kotlin/dev/deviceai/models/: ModelStorage.ios.kt
kotlin/core/src/jvmMain/kotlin/dev/deviceai/models/: ModelStorage.jvm.kt
kotlin/llm/: build.gradle.kts
kotlin/llm/src/androidMain/kotlin/dev/deviceai/llm/: LlmCppBridge.android.kt
kotlin/llm/src/commonMain/cpp/: llm_jni.cpp
kotlin/llm/src/commonMain/kotlin/dev/deviceai/llm/: ChatConfig.kt  ChatSession.kt  ChatTurn.kt  LlmCppBridge.kt  LlmModule.kt
kotlin/llm/src/commonMain/kotlin/dev/deviceai/llm/models/: LlmCatalog.kt
kotlin/llm/src/commonMain/kotlin/dev/deviceai/llm/rag/: RagAugmentor.kt
kotlin/llm/src/iosMain/cpp/: llm_ios.cpp
kotlin/llm/src/iosMain/kotlin/dev/deviceai/llm/: LlmCppBridge.ios.kt
kotlin/speech/: build.gradle.kts
kotlin/speech/cmake/speech-jni-desktop/: CMakeLists.txt
kotlin/speech/cmake/speech-wrapper-ios/: CMakeLists.txt
kotlin/speech/src/androidMain/kotlin/dev/deviceai/: SpeechBridge.android.kt
kotlin/speech/src/commonMain/cpp/: CMakeLists.txt  deviceai_tts_jni.cpp  whisper_jni.cpp
kotlin/speech/src/commonMain/kotlin/dev/deviceai/: SpeechBridge.kt  VadCallback.kt  VadConfig.kt
kotlin/speech/src/commonMain/kotlin/dev/deviceai/models/: ModelInfo.kt  ModelRegistry.kt  TtsCatalog.kt  TtsDownloadStrategy.kt
kotlin/speech/src/iosMain/cpp/: deviceai_tts_ios.cpp
kotlin/speech/src/iosMain/kotlin/dev/deviceai/: SpeechBridge.ios.kt
kotlin/speech/src/jvmMain/kotlin/dev/deviceai/: SpeechBridge.jvm.kt
samples/androidApp/: build.gradle.kts
samples/androidApp/src/main/kotlin/dev/deviceai/demo/: AudioRecorder.kt
samples/composeApp/src/commonMain/kotlin/dev/deviceai/demo/: LlmViewModel.kt
samples/composeApp/src/desktopMain/kotlin/dev/deviceai/demo/: main.kt
samples/composeApp/src/iosMain/kotlin/dev/deviceai/demo/: MainViewController.kt
sdk/deviceai-commons/: CMakeLists.txt
sdk/deviceai-commons/scripts/: build-xcframeworks.sh
sdk/deviceai-commons/src/bridges/jni/: CMakeLists.txt  dai_core_jni.cpp
sdk/deviceai-commons/src/core/include/deviceai/: dai_backend.h
sdk/deviceai-commons/src/core/src/: backend_client.cpp
sdk/deviceai-commons/src/features/llm/: CMakeLists.txt
sdk/deviceai-commons/src/features/stt/: CMakeLists.txt  dai_stt.h
sdk/deviceai-commons/src/features/tts/: CMakeLists.txt
swift/: Package.swift
swift/Sources/CDeviceAI/: archive_extract.cpp  placeholder.c  stt_engine.cpp
swift/Sources/CDeviceAI/include/: dai_archive.h  module.modulemap  shim.h
swift/Sources/DeviceAI/: Configuration.swift  DeviceAI.swift  DeviceCapabilities.swift  DeviceFingerprint.swift  Errors.swift  Logger.swift
swift/Sources/DeviceAI/Backend/: BackendClient.swift  DeviceSession.swift  ManifestModels.swift
swift/Sources/DeviceAI/Telemetry/: NetworkPolicy.swift  TelemetryEngine.swift  TelemetryEvent.swift  TelemetryLevel.swift  TelemetrySink.swift
swift/Sources/DeviceAILLM/: ChatConfig.swift  ChatSession.swift  ChatTurn.swift  LlmCatalog.swift  LlmMessage.swift  LlmModule.swift  LlmResult.swift
swift/Sources/DeviceAILLM/RAG/: BM25RagStore.swift  RagAugmentor.swift  RagChunk.swift  RagRetriever.swift
swift/Sources/DeviceAISpeech/: AudioSegment.swift  SttConfig.swift  SttEngine.swift  SystemTTSEngine.swift  TranscriptionResult.swift  TtsConfig.swift  TtsEngine.swift
swift/Tests/DeviceAILLMTests/: LlmTests.swift
swift/Tests/DeviceAISpeechTests/: SpeechTests.swift
swift/Tests/DeviceAITests/: DeviceAITests.swift
